# src/routes.js
@@ -5,9 +5,15 @@ const authToken = require("./middleware/authenticate");
 const UserController = require("./controllers/UserController.js");
 
 routes.get("/", UserController.getMessage);
-routes.get("/users", authToken, UserController.listenUser);
-routes.get("/user/:userId", authToken, UserController.findUser);
-routes.post("/createUser", authToken, UserController.createUser);
-routes.delete("/users/:userId", authToken, UserController.deleteUser);
+routes.post("/generateToken", UserController.generateToken);
+
+routes.use(authToken)
+
+routes.get("/users", UserController.listenUser);
+routes.get("/user/:userId", UserController.findUser);
+routes.post("/importUsers", UserController.importUsers);
+routes.post("/createUser", UserController.createUser);
+routes.put("/updateUser/:userId", UserController.updateUser);
+routes.delete("/users/:userId", UserController.deleteUser);
 
 module.exports = routes;
