# src/swagger.json
@@ -29,6 +29,47 @@
                 }
             }
         },
+        "/generateToken": {
+            "post": {
+                "description": "Responsável pela geração do token, para autenticação da api",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Responsável pela geração do token, para autenticação da api",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "description": "Listar todos os usuários do banco de dados",
+                "tags": [
+                    "User"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "summary": "Listar todos os usuários do banco de dados",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/{userId}": {
             "get": {
                 "description": "Busca de um usuário pelo Id",
@@ -64,10 +105,10 @@
                 }
             }
         },
-        "/createUser": {
+        "/importUsers": {
             "post": {
-                "summary": "Create user",
-                "description": "Essa rota será responsável por cadastrar os usuários no banco de dados",
+                "summary": "Responsável pela importação dos usuários",
+                "description": "Essa rota será responsável por importar os usuários da api ramdom users para o banco de dados, todos os dias as 20:00 da noite ",
                 "tags": [
                     "User"
                 ],
@@ -167,6 +208,142 @@
                 }
             }
         },
+        "/createUser": {
+            "post": {
+                "summary": "Responsável pela criação dos usuários",
+                "description": "Essa rota será responsável por criar os usuários e e salvar no BD ",
+                "tags": [
+                    "User"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/User"
+                            },
+                            "examples": {
+                                "User": {
+                                    "value": {
+                                        "gender": "male",
+                                        "name": {
+                                            "title": "Mr",
+                                            "first": "Tex",
+                                            "last": "Alderliesten"
+                                        },
+                                        "location": {
+                                            "street": {
+                                                "number": 1613,
+                                                "name": "Gerard Burgerlaan"
+                                            },
+                                            "city": "Bergen",
+                                            "state": "Limburg",
+                                            "country": "Netherlands",
+                                            "postcode": 96884,
+                                            "coordinates": {
+                                                "latitude": "5.5890",
+                                                "longitude": "178.4400"
+                                            },
+                                            "timezone": {
+                                                "offset": "-1:00",
+                                                "description": "Azores, Cape Verde Islands"
+                                            }
+                                        },
+                                        "email": "tex.alderliesten@example.com",
+                                        "login": {
+                                            "uuid": "87c424b2-df2c-447e-80bf-fc8d716cb404",
+                                            "username": "bluerabbit545",
+                                            "password": "point",
+                                            "salt": "12hMWCrP",
+                                            "md5": "30444416c0d8bb064c428274381eda40",
+                                            "sha1": "eda5326a1ee6b2999d2ac08da8dd1b7ff6eea1c7",
+                                            "sha256": "61bd84091668e992938aef8935c8d1810242b5f56d6aecb2397c07bab3548069"
+                                        },
+                                        "dob": {
+                                            "date": "1947-03-06T06:47:48.507Z",
+                                            "age": 74
+                                        },
+                                        "registered": {
+                                            "date": "2003-03-05T13:20:08.889Z",
+                                            "age": 18
+                                        },
+                                        "phone": "(674)-696-3684",
+                                        "cell": "(870)-560-4285",
+                                        "id_": {
+                                            "name": "BSN",
+                                            "value": "40628458"
+                                        },
+                                        "picture": {
+                                            "large": "https://randomuser.me/api/portraits/men/98.jpg",
+                                            "medium": "https://randomuser.me/api/portraits/med/men/98.jpg",
+                                            "thumbnail": "https://randomuser.me/api/portraits/thumb/men/98.jpg"
+                                        },
+                                        "nat": "NL",
+                                        "imported_at": "2021-08-14T20:52:00.000Z"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Error -> erro"
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/updateUser/{userId}": {
+            "put": {
+                "description": "Atualização de um usuário pelo Id",
+                "tags": [
+                    "User"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "summary": "Atualização de um usuário pelo Id",
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "path",
+                        "description": "Atualização de um usúario pelo Id",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "200": {
+                        "description": "user updated successfully"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                }
+            }
+        },
         "/users/{userId}": {
             "delete": {
                 "description": "Exclusão de um usuário pelo Id",
@@ -190,6 +367,9 @@
                 "responses": {
                     "200": {
                         "description": "User deleted sucessuful"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     },
                     "404": {
                         "description": "User not found"
